--- a/www/interior-redesign-introduction.htm
+++ b/www/interior-redesign-introduction.htm
@@ -4,10 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
-<meta name="title" content="Interior Redesign and Real Estate Staging Training Workshop, a Redesign and Staging Class" />
-<meta name="description" content="Learn interior redesign and real estate staging in the School of Interior Redesign's "Interior Redesign and Real Estate Staging Intensive" 5 day workshop which provides redecorating home instruction in the same class" />
-<meta name="keywords" content="real estate staging training,interior redesign training workshops,interior redecorating business,study design and staging,redecorating classes,one day decorating,interior redesigners,home stagers,home staging business,interior redesign certificate program,real estate staging workshops,start a business,learn real estate staging,Ann Anderson,education,seminars,The School of Interior Redesign" />
-<!-- InstanceEndEditable -->
+<meta name="title" content="Introduction to Interior Redesign Seminar: the Basics of Interior Redesign" />
+<meta name="description" content="Take the Introduction to Interior Redesign seminar to explore a career in interior redesign or learn interior redesign, sometimes called one day decorating, for your own home " />
+<meta name="keywords" content="introduction to interior redesign,interior redesign training,design workshops,seminars,classes,classroom,interior redecorating business,redecorating class,CT,Connecticut,MA,Massachusetts,learn one day decorating,decorating seminars,interior redesign certificate program,interior redesigners,start a design business,learn one day decorating,design,decorate,re-design,budget decorating,The School of Interior Redesign,Ann Anderson" /><!-- InstanceEndEditable -->
 <link href="styles/SIR_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 <!--
@@ -33,7 +32,7 @@
   ga('send', 'pageview');
 
 </script>
-<!-- InstanceBeginEditable name="doctitle" --><title>Interior Redesign and Real Estate Staging Training Workshop: a Redesign plus Home Staging Class</title><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Introduction to Interior Redesign Seminar: the Basics of Interior Redesign</title><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -60,9 +59,9 @@
             	<ul>
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-introduction.htm">Introduction to Interior Redesign</a></li>
                         	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
                     <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
@@ -71,10 +70,10 @@
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <li><a href="interior-decorating-classes.htm" class="course">Interior Decorating</a>
                     	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                        	<li><a href="interior-decorating-introduction.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="certified-decorating-professional.htm">Certified Decorating Professional&reg;</a></li>
                     	</ul>
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
@@ -97,33 +96,32 @@
           <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
-            <h1>Interior Redesign/Real Estate Staging Intensive</h1>
-            <p class="course-description">An intensive 4-day workshop that includes both interior redesign (one day decorating) and real estate staging (home staging) training</p>
-            <p>Our <strong>4-Day Interior Redesign/Real Estate Staging Training Workshop</strong> is designed to teach you everything you need to give your clients beautiful, comfortable living spaces, whether for living or selling.</p>
-            <p>Included in the training materials are the following:</p>
-            <ul>
-              <li><img src="images/staging_living_rm.jpg" width="250" height="166" align="right" />An extremely detailed analysis of interior redesign (one day decorating), including the principles and techniques critical to your success as an Interior Redesign Specialist.</li>
-              <li>The similarities and differences between real estate staging and interior redesign.</li>
-              <li>What, when, why, and how to prepare homes for sale, both inside and out.</li>
-              <li>Basic interior decorating guidelines to enhance your knowledge base.</li>
-              <li>Additional income opportunities to enable you to expand your customer base and increase your earning potential.</li>
-            </ul>
-            <h2>Hands On Interior Redesign and Staging Training</h2>
-            <p>In addition to covering the training materials in their entirety, we also complete three hands-on redesigns/stagings during the week to ensure your ability to implement what you have learned during class.</p>
-
-            <blockquote class="testimonial"><p>My Redesign/Staging Intensive was outstanding!&nbsp; I had all my thoughts and concerns at hand when I arrived at the school on Monday, and by Friday I felt totally comfortable with everything that was presented to me, both through open forum with the class as well as the excellent manual.&nbsp; We worked with the Director of the school Ann Anderson, who was very knowledgeable, loves what she does, is so upbeat in her training style and wants nothing more than the true success of each of her students.&nbsp; I learned exactly what I needed about starting my business and recommend this class to anyone seeking a professional training experience.</p><em>Lisa Ruglio&mdash;Cromwell, CT</em></blockquote>
-
-            <h2>To Enroll in the Interior Redesign/Staging<br />Intensive Class</h2>
-            <p>Cost for the full four-day Interior Redesign/Real Estate Staging Intensive held in Milford, Connecticut is $2,000, which includes all of the above, as well as lunch, and beverages and snacks each day.</p>
-		  <blockquote>
-            <p>To see the schedule of interior redesign/real estate staging (home staging) classes, check our <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
-            <p>To reserve your space in any interior redesign training or real estate staging class, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit it, along with your <a href="payment.htm">deposit of $500</a>. The balance is due two weeks prior to the start of class.</p>
-		  </blockquote>
-            <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" -->
-            <p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p>
-            <!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
-            <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
-            <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
+          <h1 align="center"> Introduction to Interior Redesign</h1>
+          <p class="course-description">A one-day interior redesign seminar</p>
+          <p><strong>If you are interested in the possibility of a career in redesign</strong> (<strong>one day decorating</strong>)
+            but want to know more, or if you are simply interested in redesign for your own home, we&rsquo;ve designed a one-day seminar just for you.</p>
+          <p><img src="images/redesign_dining_living.jpg" alt="The School of Interior Redesign's one day Introduction to Interior Redesign seminar is for anyone interested in exploring redesign as a possible career or learning about redesign for your own home." width="179" height="250" hspace="8" vspace="0" align="right" />The day begins with a get-acquainted session as we get to know each other a little better. We then spend the morning discussing the basics of interior redesign. Included in the discussion are:</p>
+          <ul>
+            <li>How to begin an interior redesign </li>
+            <li>Tools and supplies </li>
+            <li>Analyzing the room </li>
+            <li>Determining form and function </li>
+            <li>&ldquo;Shopping&rdquo; the home </li>
+            <li>Proper furniture placement, hanging of artwork, and accessorizing </li>
+            <li>Finishing touches </li>
+          </ul>
+          <p>Then, after lunch, we take a field trip to someone&rsquo;s home and actually redesign a room!</p>
+          <p>At the end of the day you will be prepared to take everything you learned and transform your own home&mdash;starting tomorrow!</p>
+        
+          <h2>To Enroll in the Introduction to Interior Redesign Class:</h2>
+          <p><strong>Cost for the One-Day Interior Redesign Seminar</strong> is $300, which includes <em><a href="work_files/books_redesign_staging.htm#Redesign_book">Redesign Step-by-Step</a></em>, and lunch.</p>
+          <blockquote>
+            <p><strong>To see the schedule of interior redesign (one day decorating) classes</strong>, check the <a href="course-schedule.htm">Class Schedule</a> for more information.</p>
+            <p><strong>To reserve your space in an</strong> <strong>interior redesign class</strong>, complete the <a href="register-redesign-staging-class.htm">Application</a> and submit, along with your <a href="payment.htm">deposit of $100</a>. The balance is due two weeks prior to the start of class.</p>
+            </blockquote>
+          <!-- #BeginLibraryItem "/Library/cancellation-policy.lbi" --><p><strong>Cancellation Policy</strong>: A full refund will be given if the student cancels ten days prior to the first day of class. A 75% refund will apply if the student cancels at anytime after the ten day cancellation period. No refund will be given after the start of classes. However, should a student need to cancel or leave due to an emergency, the tuition will be applied to another scheduled class. Refunds will be mailed to the student within fourteen days of cancellation.</p><!-- #EndLibraryItem --><!-- #BeginLibraryItem "/Library/for-more-info.lbi" -->
+          <p align="center"><strong>For more information on any interior redesign training workshop</strong>, email <a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a> or call the School of Interior Redesign LLC at <strong><a href="tel:203-783-1556">(203) 783-1556</a></strong> or <strong><a href="tel:877-814-0518">(877) 814-0518</a></strong> toll-free.</p>
+          <!-- #EndLibraryItem --><!-- InstanceEndEditable --></td>
         </tr>
         <tr>
           <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
