File Name Updates
Updates that include renamed files and updated library and template items.

--- a/www/index.htm
+++ b/www/index.htm
@@ -69,9 +69,9 @@
             	<ul>
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-introduction.htm">Introduction to Interior Redesign</a></li>
                         	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
                     <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
@@ -80,10 +80,10 @@
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <li><a href="interior-decorating-classes.htm" class="course">Interior Decorating</a>
                     	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                        	<li><a href="interior-decorating-introduction.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="certified-decorating-professional.htm">Certified Decorating Professional&reg;</a></li>
                     	</ul>
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
