--- a/www/interior-decorating-classes.htm
+++ b/www/interior-decorating-classes.htm
@@ -59,9 +59,9 @@
             	<ul>
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-introduction.htm">Introduction to Interior Redesign</a></li>
                         	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
                     <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
@@ -72,8 +72,8 @@
                     </li>
                     <li><a href="interior-decorating-classes.htm" class="course">Interior Decorating</a>
                     	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                        	<li><a href="interior-decorating-introduction.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="certified-decorating-professional.htm">Certified Decorating Professional&reg;</a></li>
                     	</ul>
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
@@ -108,7 +108,7 @@
       <h2>Certified Decorating Professional&reg;</h2>
       <p>The <a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg; program</a> is designed for the professional who wishes to <strong>add</strong> <strong>interior decorating</strong> <strong>to existing services or for the person interested in honing their skills as a Decorating Professional</strong>. </p>
         <h2>Introduction to Interior Decorating</h2>
-        <p>The <a href="interior-decorating-intro.htm" target="_blank">Introduction to Interior Decorating</a> <strong>one-day seminar</strong> is designed for the <strong>decorating novice</strong> who wants to learn more or the <strong>seasoned staging or design professionals</strong> who would like to learn more about the in’s and out’s of interior decorating to enhance their skills.</p>
+        <p>The <a href="interior-decorating-introduction.htm" target="_blank">Introduction to Interior Decorating</a> <strong>one-day seminar</strong> is designed for the <strong>decorating novice</strong> who wants to learn more or the <strong>seasoned staging or design professionals</strong> who would like to learn more about the in’s and out’s of interior decorating to enhance their skills.</p>
         <h2>Certified Decorating Professional&reg; Home Study</h2>
         <p>If you would like to become a <a href="assets/sir-certified-decorating-professional-home-study.pdf" target="_blank">Certified Decorating Professional</a>, but the distance involved is too great, learn all of the valuable information in the<strong> comfort of your own hom</strong>e. You will receive a <strong>comprehensive manual</strong> and <strong>accompanying workbook</strong> filled with everything you need to know to succeed as a <strong>decorating professional</strong>.</p>
             <p><strong>Please Note:  </strong></p>
