--- a/www/interior-redesign-classes.htm
+++ b/www/interior-redesign-classes.htm
@@ -60,9 +60,9 @@
             	<ul>
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-introduction.htm">Introduction to Interior Redesign</a></li>
                         	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
                     <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
@@ -71,10 +71,10 @@
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <li><a href="interior-decorating-classes.htm" class="course">Interior Decorating</a>
                     	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                        	<li><a href="interior-decorating-introduction.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="certified-decorating-professional.htm">Certified Decorating Professional&reg;</a></li>
                     	</ul>
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
@@ -101,7 +101,7 @@
           <p><img src="images/redesign_bed_stool.jpg" alt="Interior redecorating (sometimes called one-day decorating) classes offered by the School of Interior Redesign include an Introduction to Interior Redesign seminar, Interior Redesign for the Professional, and an Intensive Interior Redesign and Real Estate Staging workshop, available in our Milford CT school or for home study through teleclasses." width="134" height="200" hspace="6" align="right" />Interior redesign, or using the homeowner's own things to create warm, inviting
             spaces, is becoming more and more popular, as people realize the incredible difference this practical, less expensive alternative to traditional interior decorating or design can make in their homes. And now, through the School of Interior Redesign LLC, you can <strong>learn the art of interior redesign</strong> (sometimes called <strong>one day decorating</strong>), whether to start a new career, add to your existing business, or to simply use in your own home.</p>
           <h2>Introduction to Interior Redesign</h2>
-          <p>Through our <a href="interior-redesign-intro.htm">one-day seminar in interior redesign</a>, you will learn how to have the home of your dreams - without buying
+          <p>Through our <a href="interior-redesign-introduction.htm">one-day seminar in interior redesign</a>, you will learn how to have the home of your dreams - without buying
             a thing! This seminar also provides an excellent <strong>introduction to</strong> <strong>interior redesign</strong> for those interested in the possibility of a
             new career.</p>
           <h2>Interior Redesign Intensive</h2>
