--- a/www/real-estate-staging.htm
+++ b/www/real-estate-staging.htm
@@ -60,9 +60,9 @@
             	<ul>
 					<li><a href="interior-redesign-classes.htm" class="course">Interior Redesign</a>
                     	<ul>
-                        	<li><a href="interior-redesign-intro.htm">Introduction to Interior Redesign</a></li>
+                        	<li><a href="interior-redesign-introduction.htm">Introduction to Interior Redesign</a></li>
                         	<li><a href="interior-redesign-intensive.htm">Redesign Intensive</a></li>
-                        	<li><a href="interior-redesign-staging.htm">Redesign/Staging Intensive</a></li>
+                        	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
                     <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
@@ -71,10 +71,10 @@
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="interior-decorating-training-classes.htm" class="course">Interior Decorating</a>
+                    <li><a href="interior-decorating-classes.htm" class="course">Interior Decorating</a>
                     	<ul>
-                        	<li><a href="interior-decorating-intro.htm">Introduction to Interior Decorating</a></li>
-                        	<li><a href="interior-decorator-training-course-3day.htm">Certified Decorating Professional&reg;</a></li>
+                        	<li><a href="interior-decorating-introduction.htm">Introduction to Interior Decorating</a></li>
+                        	<li><a href="certified-decorating-professional.htm">Certified Decorating Professional&reg;</a></li>
                     	</ul>
                     </li>
 					<li><a href="business-of-design.htm">The Business of Design</a>
@@ -98,7 +98,7 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
           <h1 align="center"> Real Estate Staging Classes</h1>
-          <p><img src="images/staging_chair_vignette.jpg" alt="Real estate staging training (home staging training) classes offered by the School of Interior Redesign include a Real Estate Staging for the Professional workshop and an Intensive Real Estate Staging certificate program, with both real estate staging training and home staging training education classes available in our Milford CT school or for home study through teleclasses. " width="158" height="250" hspace="6" vspace="8" align="right" />While the four-day <a href="interior-redesign-staging.htm">Interior Redesign/Real Estate Staging Intensive Workshop</a> includes real estate staging training (home staging training), <strong>if you are interested strictly in real estate staging</strong>, check out the home staging workshops below:</p>
+          <p><img src="images/staging_chair_vignette.jpg" alt="Real estate staging training (home staging training) classes offered by the School of Interior Redesign include a Real Estate Staging for the Professional workshop and an Intensive Real Estate Staging certificate program, with both real estate staging training and home staging training education classes available in our Milford CT school or for home study through teleclasses. " width="158" height="250" hspace="6" vspace="8" align="right" />While the four-day <a href="interior-redesign-staging-intensive.htm">Interior Redesign/Real Estate Staging Intensive Workshop</a> includes real estate staging training (home staging training), <strong>if you are interested strictly in real estate staging</strong>, check out the home staging workshops below:</p>
           <h2>Real Estate Staging<br/>Intensive Training </h2>
           <p>The <a href="real-estate-staging-intensive-3-day.htm">Real Estate Staging Intensive Workshop</a> is a Certificate home staging training program designed          <strong>for those interested strictly in real estate staging</strong>. This is 2 days of intensive real estate staging training, including hands-on home staging experience.</p>
               <h2>Real Estate Staging Home Study</h2>
