--- a/www/real-estate-staging-classes.htm
+++ b/www/real-estate-staging-classes.htm
@@ -33,7 +33,7 @@
   ga('send', 'pageview');
 
 </script>
-<!-- InstanceBeginEditable name="doctitle" --><title>Real Estate Staging Training and Home Staging Training in CT School of Interior Redesign</title><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Real Estate Staging Classes: School of Interior Redesign, LLC</title><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -65,7 +65,7 @@
                         	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <li><a href="real-estate-staging-classes.htm" class="course">Real Estate Staging</a>
                     	<ul>
 <!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
@@ -85,7 +85,7 @@
 					</li>
                 </ul>
             </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="home-study.htm">Home Study</a></li>
             <li><a href="course-schedule.htm">Class Schedule</a></li>
 <!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
             <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
