Update Page Titles
Update page title elements for consistency and brevity.

--- a/www/ezine-redesign-staging-school.htm
+++ b/www/ezine-redesign-staging-school.htm
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
-<meta name="title" content="Free Ezine on Interior Redesign, Real Estate Staging Training, Workshops, Classes, Teleclasses, Business, Marketing" />
+<meta name="title" content="Free E-Zine on Interior Redesign, Real Estate Staging Training, Workshops, Classes, Teleclasses, Business, Marketing" />
 <meta name="description" content="Sign up for the free e-zine from School of Interior Redesign for info on interior redesign and real estate staging plus updates on redesign and home staging workshops and certificate programs through classroom training and teleclasses" />
 <meta name="keywords" content="home staging business,interior redesign certificate program,real estate staging workshops,interior redesign training workshops,real estate staging training,teleclasses,interior redecorating business,home study,redecorating classes in CT,learn one day decorating,start a business,learn real estate staging at home,interior redesigners,home stagers" />
 <!-- InstanceEndEditable -->
@@ -33,7 +33,7 @@
   ga('send', 'pageview');
 
 </script>
-<!-- InstanceBeginEditable name="doctitle" --><title>Free Ezine: Interior Redesign, Real Estate Staging Training, Workshops, Classes, Teleclasses, Business, Marketing</title><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Sign up to Recieve the Free Ezine from the School of Interior Redesign, LLC</title><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -65,7 +65,7 @@
                         	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <li><a href="real-estate-staging-classes.htm" class="course">Real Estate Staging</a>
                     	<ul>
 <!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
@@ -85,7 +85,7 @@
 					</li>
                 </ul>
             </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="home-study.htm">Home Study</a></li>
             <li><a href="course-schedule.htm">Class Schedule</a></li>
 <!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
             <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
