--- a/www/interior-redesign-introduction.htm
+++ b/www/interior-redesign-introduction.htm
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
-<meta name="title" content="Introduction to Interior Redesign Seminar: the Basics of Interior Redesign" />
+<meta name="title" content="Introduction to Interior Redesign" />
 <meta name="description" content="Take the Introduction to Interior Redesign seminar to explore a career in interior redesign or learn interior redesign, sometimes called one day decorating, for your own home " />
 <meta name="keywords" content="introduction to interior redesign,interior redesign training,design workshops,seminars,classes,classroom,interior redecorating business,redecorating class,CT,Connecticut,MA,Massachusetts,learn one day decorating,decorating seminars,interior redesign certificate program,interior redesigners,start a design business,learn one day decorating,design,decorate,re-design,budget decorating,The School of Interior Redesign,Ann Anderson" /><!-- InstanceEndEditable -->
 <link href="styles/SIR_style.css" rel="stylesheet" type="text/css" />
@@ -32,7 +32,7 @@
   ga('send', 'pageview');
 
 </script>
-<!-- InstanceBeginEditable name="doctitle" --><title>Introduction to Interior Redesign Seminar: the Basics of Interior Redesign</title><!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="doctitle" --><title>Introduction to Interior Redesign: School of Interior Redesign, LLC</title><!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -64,7 +64,7 @@
                         	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <li><a href="real-estate-staging-classes.htm" class="course">Real Estate Staging</a>
                     	<ul>
 <!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
@@ -84,7 +84,7 @@
 					</li>
                 </ul>
             </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="home-study.htm">Home Study</a></li>
             <li><a href="course-schedule.htm">Class Schedule</a></li>
 <!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
             <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
