--- a/www/real-estate-staging-intensive.htm
+++ b/www/real-estate-staging-intensive.htm
@@ -34,7 +34,7 @@
 
 </script>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Home Staging Training Workshop, a Real Estate Staging Training Class: Incorporate Staging into Your Business</title>
+<title>Real Estate Staging Intensive Training: School of Interior Redesign, LLC</title>
 <!-- InstanceEndEditable -->
 </head>
 
@@ -67,7 +67,7 @@
                         	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <li><a href="real-estate-staging-classes.htm" class="course">Real Estate Staging</a>
                     	<ul>
 <!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
@@ -87,7 +87,7 @@
 					</li>
                 </ul>
             </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="home-study.htm">Home Study</a></li>
             <li><a href="course-schedule.htm">Class Schedule</a></li>
 <!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
             <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
