--- a/www/register-redesign-staging-class.htm
+++ b/www/register-redesign-staging-class.htm
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <!-- InstanceBeginEditable name="head-content" -->
-<title>Interior Redesign Training and Real Estate Staging Training: Register for School of Interior Redesign Classes</title>
+<title>Register for School of Interior Redesign, LLC Classes</title>
 <meta name="title" content="Interior Redesign Training and Real Estate Staging Training, Register for School of Interior Redesign Classes" />
 <meta name="description" content="Register securely online for the School of Interior Redesign's interior redesign, redecorating, and real estate home staging classes, workshops, seminars, certificate programs, classroom training and teleclasses" />
 <meta name="keywords" content="interior redesign training workshops,real estate staging training,teleclasses,interior redecorating business,home study,redecorating classes,one day decorating,Ann Anderson,home staging business,interior redesign certificate program,real estate staging workshops,start a business,learn real estate staging at home,The School of Interior Redesign,CT,MA" />
@@ -68,7 +68,7 @@
                         	<li><a href="interior-redesign-staging-intensive.htm">Redesign/Staging Intensive</a></li>
                         </ul>
                     </li>
-                    <li><a href="real-estate-staging.htm" class="course">Real Estate Staging</a>
+                    <li><a href="real-estate-staging-classes.htm" class="course">Real Estate Staging</a>
                     	<ul>
 <!--                        	<li><a href="../real-estate-staging-professional.htm">Staging for the Professional</a></li>-->
                             <li><a href="real-estate-staging-intensive.htm">Real Estate Staging Intensive</a></li>
@@ -88,7 +88,7 @@
 					</li>
                 </ul>
             </li>
-            <li><a href="distance-learning-redesign-staging.htm">Home Study</a></li>
+            <li><a href="home-study.htm">Home Study</a></li>
             <li><a href="course-schedule.htm">Class Schedule</a></li>
 <!--            <li><a href="../directions-school-redesign-staging.htm">Directions To The School</a></li>-->
             <li><a href="register-redesign-staging-class.htm">Register Online</a></li>
