--- a/www/certified-decorating-professional.htm
+++ b/www/certified-decorating-professional.htm
@@ -98,7 +98,7 @@
           <td width="540" align="left" valign="top"><br />
             <!-- InstanceBeginEditable name="content" -->
             <h1 align="center">Certified Decorating Professional&reg; Program </h1>
-            <p class="course-description">A three day interior decorator training course designed for the professional who wishes to add interior decorating to their services</p>
+            <p class="course-description">A 3 day interior decorator training course designed for the professional who wishes to add interior decorating to their services</p>
             <p><img src="images/iStock_000001456091XSmall.jpg" width="250" align="right"/>Would you like to <strong>add interior decorating to your
                 current business</strong> Or would you like to <strong>improve your decorating skills</strong> to feel more confident as you work with your clients in a design-related business?&nbsp; Our<strong> Certified Decorating Professional</strong>&reg; <strong>program</strong> is just what you need!</p>
             <p><strong>What will you learn in this interior decorating course?</strong></p>
