--- a/www/ezine-redesign-staging-school.htm
+++ b/www/ezine-redesign-staging-school.htm
@@ -100,7 +100,7 @@
           <h1 align="center"> Free E-Zine </h1>
           <p>
           </p>
-          <h3 align="left">You'll Learn a Lot from Our Free Business and Marketing
+          <h3 align="left">You'll Learn A Lot from Our Free Business and Marketing
             E-Zine!</h3>
           <ul>
             <li>Are you looking for help in setting up your interior design,
