--- a/www/register-redesign-staging-class.htm
+++ b/www/register-redesign-staging-class.htm
@@ -153,36 +153,36 @@
                     <td colspan="2" align="left" valign="top"><h2>In-Person Workshops</h2>
                       <ul class="course-list">
                         <li>
-                          <input name="course" type="checkbox" value="Introduction to Interior Redesign Seminar" />
-                          <label>Introduction to Interior Redesign Seminar (1 Day)</label>
+                          <input name="course" type="checkbox" value="Introduction to Interior Redesign" />
+                          <label>Introduction to Interior Redesign (1 Day)</label>
                         </li>
                         <li>
-                          <input name="course" type="checkbox" value="Interior Redesign for the Professional Workshop (3 Days)" />
-                          <label>Interior Redesign for the Professional Workshop (3 Days)</label>
+                          <input name="course" type="checkbox" value="Interior Redesign Intensive" />
+                          <label>Interior Redesign Intensive (3 Day)</label>
                         </li>
                         <li>
-                          <input name="course" type="checkbox" value="Interior Redesign/Staging Intensive (5 Days)" />
-                          <label>Interior Redesign/Staging Intensive (5 Days)</label>
+                          <input name="course" type="checkbox" value="Interior Redesign/Real Estate Staging Intensive" />
+                          <label>Interior Redesign/Real Estate Staging Intensive (4 Day)</label>
                         </li>
                         <li>
-                          <input name="course" type="checkbox" value="Real Estate Staging for the Professional (2 Days)" />
-                          <label>Real Estate Staging for the Professional (2 Days)</label>
+                          <input name="course" type="checkbox" value="Real Estate Staging Intensive" />
+                          <label>Real Estate Staging Intensive (2 Day)</label>
                         </li>
                         <li>
-                          <input name="course" type="checkbox" value="Real Estate Staging for the Professional (2.5 Days)" />
-                          <label>Real Estate Staging for the Professional (2-1/2 Days)</label>
-                        </li>
-                        <li>
-                          <input name="course" type="checkbox" value="Real Estate Staging Intensive Training (3 Days)" />
-                          <label>Real Estate Staging Intensive Training (3 Days)</label>
-                        </li>
-                        <li>
-                          <input name="course" type="checkbox" value="Introduction to Interior Decorating (1 Day)" />
-                          <label>Introduction to Interior Decorating</label>
+                          <input name="course" type="checkbox" value="Introduction to Interior Decorating" />
+                          <label>Introduction to Interior Decorating (1 Day)</label>
                         </li>
                         <li>
                           <input name="course" type="checkbox" value="Certified Decorating Professional Program" />
-                          <label>Certified Decorating Professional&reg; Program (3 Days)</label>
+                          <label>Certified Decorating Professional&reg; Program (3 Day)</label>
+                        </li>
+                        <li>
+                          <input name="course" type="checkbox" value="Starting Your Design Related Business" />
+                          <label>Starting Your Design Related Business (Half Day)</label>
+                        </li>
+                        <li>
+                          <input name="course" type="checkbox" value="Marketing Your Design Related Business" />
+                          <label>Marketing Your Design Related Business (Half Day)</label>
                         </li>
                         
                         <!--                        <li>
